# revkit

./: README.md
scripts/: config  fmi
src/core/: circuit.cpp  circuit.hpp  gate.cpp  target_tags.cpp  target_tags.hpp
src/core/functions/: add_gates.cpp
src/core/io/: print_circuit.cpp  read_realization.cpp  write_realization.cpp
src/examples/: CMakeLists.txt  adding_gates.py  bdd_synthesis.py  calling_an_approach.py  creating_a_circuit.py  displaying_a_circuit.py  example1.cpp  example2.cpp  example3.cpp  example4.cpp  hierarchies.real  iterating_though_the_gates_of_circuit.py  list_modules.py  reading_and_writing_a_circuit_from_a.py  swop.py  test_reed_muller_synthesis.py  truth_table_embedding.py
tools/: adding_lines.py  bdd_synthesis.py  circuit_statistics.py  create_image.py  embed_truth_table.py  equivalence_checker.py  esop_synthesis.py  exact_synthesis.py  kfdd_synthesis.py  latex_generator.py  line_reduction.py  lnn_optimization.py  quantum_decomposition.py  reed_muller_synthesis.py  transformation_based_synthesis.py  viewer.py  window_optimization.py
tools/gui/: gui.py
